[gd_scene load_steps=11 format=3 uid="uid://cwoo3dnk3u7hw"]

[ext_resource type="Script" uid="uid://cdf7dmsy51us0" path="res://scripts/ui.gd" id="1_nt7q6"]
[ext_resource type="Texture2D" uid="uid://bpjf0co4iue27" path="res://assets/progress_bar_base_under.png" id="2_gdt2y"]
[ext_resource type="Texture2D" uid="uid://c7mi5fhdt6ptt" path="res://assets/progress_bar_base_over.png" id="2_yev5y"]
[ext_resource type="Texture2D" uid="uid://ckj82u7mbrfr8" path="res://assets/progress_bar_base.png" id="3_gdt2y"]
[ext_resource type="Texture2D" uid="uid://bf16xm8cpl5iq" path="res://assets/art/star_transparent.png" id="5_wm3ai"]

[sub_resource type="Animation" id="Animation_8dubc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightMeter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(268, 606)]
}

[sub_resource type="Animation" id="Animation_wm3ai"]
resource_name = "shake"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightMeter:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.1, 0.13333334, 0.16666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(268, 604), Vector2(269, 605), Vector2(267, 603), Vector2(269, 605), Vector2(267, 605), Vector2(267, 603), Vector2(267.048, 604)]
}

[sub_resource type="Animation" id="Animation_gdt2y"]
resource_name = "still"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wm3ai"]
_data = {
&"RESET": SubResource("Animation_8dubc"),
&"shake": SubResource("Animation_wm3ai"),
&"still": SubResource("Animation_gdt2y")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gdt2y"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.289
spread = 130.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
gravity = Vector3(0, 98, 0)
scale_min = 3.0
scale_max = 6.0
color = Color(0.103743516, 0.10374353, 0.103743516, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nt7q6")

[node name="LightMeter" type="TextureProgressBar" parent="."]
offset_left = 268.0
offset_top = 606.0
offset_right = 908.0
offset_bottom = 646.0
max_value = 500.0
value = 50.0
texture_under = ExtResource("2_gdt2y")
texture_over = ExtResource("2_yev5y")
texture_progress = ExtResource("3_gdt2y")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -25.0
offset_top = -10.0
offset_right = 1173.0
offset_bottom = 666.0
color = Color(0, 0, 0, 0)

[node name="HpAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wm3ai")
}

[node name="NodeEnd" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_gdt2y")

[node name="NodeEnd2" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_gdt2y")

[node name="NodeEnd3" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_gdt2y")

[node name="StarSprite" type="Sprite2D" parent="."]
position = Vector2(223, 613)
scale = Vector2(4, 4)
texture = ExtResource("5_wm3ai")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
